fixed slideshow height on mobile

--- a/app/themes/so-il/src/sass/_settings.scss
+++ b/app/themes/so-il/src/sass/_settings.scss
@@ -660,7 +660,7 @@ $cropping-enlargement: 1.2;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     
     #{unquote($item)} {
       @include background;
